<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".third_question"
    android:background="#99d3d3d3">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/tv"
        android:layout_above="@id/question1T"/>

    <TextView
        android:id="@+id/question1T"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:layout_centerHorizontal="true"
        android:text="@string/q3"/>

    <RadioGroup
        android:id="@+id/tv_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question1T"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="50dp">
        <RadioButton
            android:id="@+id/kuwtk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickRadioT"
            android:text="@string/tv1"/>
        <RadioButton
            android:id="@+id/house"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickRadioT"
            android:text="@string/tv2"/>
        <RadioButton
            android:id="@+id/the_simpsons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickRadioT"
            android:text="@string/tv3"/>
    </RadioGroup>

    <Button
        android:id="@+id/prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_group"
        android:layout_marginLeft="20dp"
        android:text="@string/previous"
        android:onClick="onClickTVPrevButton"/>
    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_group"
        android:layout_centerHorizontal="true"
        android:onClick="onSubmitTV"
        android:text="@string/submit"/>
    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_group"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:text="@string/next"
        android:onClick="onClickTVNextButton"/>
    <Button
        android:id="@+id/restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/submit"
        android:layout_centerHorizontal="true"
        android:text="@string/restart"
        android:onClick="onClickTVReset"/>

</RelativeLayout>