<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fourth_question"
    android:background="#9940bf80">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/reading"
        android:layout_above="@id/question1H"/>


    <TextView
        android:id="@+id/question1H"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:layout_centerHorizontal="true"
        android:text="@string/q4"/>

    <RadioGroup
        android:id="@+id/hobby_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question1H"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="50dp">
        <RadioButton
            android:id="@+id/read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickRadioH"
            android:text="@string/hobby1"/>
        <RadioButton
            android:id="@+id/lifting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickRadioH"
            android:text="@string/hobby2"/>
        <RadioButton
            android:id="@+id/hike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickRadioH"
            android:text="@string/hobby3"/>
    </RadioGroup>

    <Button
        android:id="@+id/prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hobby_group"
        android:layout_marginLeft="20dp"
        android:text="@string/previous"
        android:onClick="onClickHobbyPrevButton"/>
    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hobby_group"
        android:layout_centerHorizontal="true"
        android:onClick="onSubmitHobby"
        android:text="@string/submit"/>
    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hobby_group"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:text="@string/next"
        android:onClick="onClickHobbyNextButton"/>
    <Button
        android:id="@+id/restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/submit"
        android:layout_centerHorizontal="true"
        android:text="@string/restart"
        android:onClick="onClickHobbyReset"/>

</RelativeLayout>